// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log Config component renders empty log config 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiAccordion"
        data-test-subj="logSourceAccordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="logSource"
            aria-expanded="false"
            class="euiAccordion__button"
            id="random_html_id"
            type="button"
          >
            <span
              class="euiAccordion__iconWrapper"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </span>
            <span
              class="euiIEFlexWrapFix"
            >
              <div
                class="euiText euiText--small"
              >
                <h3>
                  Log source
                </h3>
              </div>
              <div
                class="euiSpacer euiSpacer--s"
              />
              <div
                class="euiText euiText--small"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Configure your application base query
                </div>
              </div>
            </span>
          </button>
          <div
            class="euiAccordion__optionalAction"
          >
            <button
              class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
              data-test-subj="clearLogSourceButton"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Clear
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="random_html_id"
          class="euiAccordion__childWrapper"
          id="logSource"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class="euiAccordion__padding--l"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiCallOut euiCallOut--primary euiCallOut--small"
                    id="baseQueryCallout"
                  >
                    <div
                      class="euiText euiText--extraSmall"
                    >
                      <div
                        class="euiTextColor euiTextColor--default"
                      >
                        You can't change the base query after the application is created.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow euiFormRow--compressed"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__labelWrapper"
                    >
                      <label
                        class="euiFormLabel euiFormRow__label"
                        for="random_html_id"
                      >
                        Base Query
                      </label>
                    </div>
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        aria-describedby="random_html_id-help-0"
                        class="euiFlexItem euiFlexItem--flexGrowZero query-area"
                        id="random_html_id"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="autocomplete-0-label"
                          class="aa-Autocomplete"
                          id="autocomplete-root"
                          role="combobox"
                        >
                          <textarea
                            aria-autocomplete="both"
                            aria-labelledby="autocomplete-0-label"
                            autocapitalize="off"
                            autocomplete="off"
                            autocorrect="off"
                            class="euiTextArea euiTextArea--resizeVertical euiTextArea--compressed"
                            data-test-subj="searchAutocompleteTextArea"
                            enterkeyhint="search"
                            id="autocomplete-textarea"
                            maxlength="16384"
                            placeholder="Enter query"
                            rows="3"
                            spellcheck="false"
                            style="margin-top: 0px; height: 18px; padding: 8px;"
                            type="search"
                          />
                        </div>
                        <button
                          aria-label="pplLinkShowFlyout"
                          class="euiBadge euiBadge-isClickable euiBadge--hollow euiBadge--iconLeft ppl-link ppl-link-light"
                          title="PPL"
                        >
                          <span
                            class="euiBadge__content"
                          >
                            <span
                              class="euiBadge__text"
                            >
                              PPL
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        class="euiFormHelpText euiFormRow__text"
                        id="random_html_id-help-0"
                      >
                        The default logs view in the application will be filtered by this query.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Log Config component renders with query 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiAccordion"
        data-test-subj="logSourceAccordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="logSource"
            aria-expanded="false"
            class="euiAccordion__button"
            id="random_html_id"
            type="button"
          >
            <span
              class="euiAccordion__iconWrapper"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiAccordion__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                  fill-rule="nonzero"
                />
              </svg>
            </span>
            <span
              class="euiIEFlexWrapFix"
            >
              <div
                class="euiText euiText--small"
              >
                <h3>
                  Log source
                </h3>
              </div>
              <div
                class="euiSpacer euiSpacer--s"
              />
              <div
                class="euiText euiText--small"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Configure your application base query
                </div>
              </div>
            </span>
          </button>
          <div
            class="euiAccordion__optionalAction"
          >
            <button
              class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
              data-test-subj="clearLogSourceButton"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Clear
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="random_html_id"
          class="euiAccordion__childWrapper"
          id="logSource"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class="euiAccordion__padding--l"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiCallOut euiCallOut--primary euiCallOut--small"
                    id="baseQueryCallout"
                  >
                    <div
                      class="euiText euiText--extraSmall"
                    >
                      <div
                        class="euiTextColor euiTextColor--default"
                      >
                        You can't change the base query after the application is created.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiFormRow euiFormRow--compressed"
                    id="random_html_id-row"
                  >
                    <div
                      class="euiFormRow__labelWrapper"
                    >
                      <label
                        class="euiFormLabel euiFormRow__label"
                        for="random_html_id"
                      >
                        Base Query
                      </label>
                    </div>
                    <div
                      class="euiFormRow__fieldWrapper"
                    >
                      <div
                        aria-describedby="random_html_id-help-0"
                        class="euiFlexItem euiFlexItem--flexGrowZero query-area"
                        id="random_html_id"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="autocomplete-1-label"
                          class="aa-Autocomplete"
                          id="autocomplete-root"
                          role="combobox"
                        >
                          <textarea
                            aria-autocomplete="both"
                            aria-labelledby="autocomplete-1-label"
                            autocapitalize="off"
                            autocomplete="off"
                            autocorrect="off"
                            class="euiTextArea euiTextArea--resizeVertical euiTextArea--compressed"
                            data-test-subj="searchAutocompleteTextArea"
                            enterkeyhint="search"
                            id="autocomplete-textarea"
                            maxlength="16384"
                            placeholder="Enter query"
                            rows="3"
                            spellcheck="false"
                            style="margin-top: 0px; height: 18px; padding: 8px;"
                            type="search"
                          >
                            source = openserach_dashboard_sample_logs
                          </textarea>
                        </div>
                        <button
                          aria-label="pplLinkShowFlyout"
                          class="euiBadge euiBadge-isClickable euiBadge--hollow euiBadge--iconLeft ppl-link ppl-link-light"
                          title="PPL"
                        >
                          <span
                            class="euiBadge__content"
                          >
                            <span
                              class="euiBadge__text"
                            >
                              PPL
                            </span>
                          </span>
                        </button>
                      </div>
                      <div
                        class="euiFormHelpText euiFormRow__text"
                        id="random_html_id-help-0"
                      >
                        The default logs view in the application will be filtered by this query.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
